// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render a navigation menu component with a view more button 1`] = `
<Menu
  onBackdropPress={[Function]}
  onClose={[Function]}
  onOpen={[Function]}
  onSelect={[Function]}
  renderer={[Function]}
  rendererProps={Object {}}
>
  <MenuTrigger
    customStyles={Object {}}
    disabled={false}
  >
    <Icon
      allowFontScaling={false}
      color="#FFFFFF"
      name="jbh-Notification"
      size={23}
      style={Object {}}
    />
  </MenuTrigger>
  <MenuOptions
    customStyles={
      Object {
        "optionText": Object {
          "color": "#444444",
          "fontSize": 12,
        },
        "optionTouchable": Object {
          "activeOpacity": 0.3,
          "underlayColor": "transparent",
        },
        "optionWrapper": Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "margin": 5,
        },
        "optionsContainer": Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 7,
        },
        "optionsWrapper": Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 7,
          "paddingHorizontal": 3,
          "paddingVertical": 10,
          "width": 726.0406582768636,
        },
      }
    }
  >
    <FlatList
      ItemSeparatorComponent={[Function]}
      bounces={false}
      data={
        Array [
          Object {
            "key": "Load HV51606 - Status Update",
            "status": "You have been outbid",
            "time": "2m",
          },
          Object {
            "key": "Favorite Lanes - Available Load",
            "status": "Dallas, TX, 73019 - San Antonio, TX, 78719",
            "time": "23m",
          },
          Object {
            "key": "Manage Users - Approval Needed",
            "status": "New User Paul",
            "time": "2d",
          },
          Object {
            "key": "Load HV51607 - Status Update",
            "status": "You have been outbid",
            "time": "2m",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
    <View
      style={undefined}
    >
      <TouchableOpacity
        activeOpacity={0.2}
        style={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={undefined}
        >
          View all Notifications (
          5
          )
        </Text>
      </TouchableOpacity>
    </View>
  </MenuOptions>
</Menu>
`;

exports[`can render a navigation menu component without a view more button 1`] = `
<Menu
  onBackdropPress={[Function]}
  onClose={[Function]}
  onOpen={[Function]}
  onSelect={[Function]}
  renderer={[Function]}
  rendererProps={Object {}}
>
  <MenuTrigger
    customStyles={Object {}}
    disabled={false}
  >
    <Icon
      allowFontScaling={false}
      color="#FFFFFF"
      name="jbh-Notification"
      size={23}
      style={Object {}}
    />
  </MenuTrigger>
  <MenuOptions
    customStyles={
      Object {
        "optionText": Object {
          "color": "#444444",
          "fontSize": 12,
        },
        "optionTouchable": Object {
          "activeOpacity": 0.3,
          "underlayColor": "transparent",
        },
        "optionWrapper": Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "margin": 5,
        },
        "optionsContainer": Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 7,
        },
        "optionsWrapper": Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 7,
          "paddingHorizontal": 3,
          "paddingVertical": 10,
          "width": 726.0406582768636,
        },
      }
    }
  >
    <FlatList
      ItemSeparatorComponent={[Function]}
      bounces={false}
      data={
        Array [
          Object {
            "key": "Load HV51606 - Status Update",
            "status": "You have been outbid",
            "time": "2m",
          },
          Object {
            "key": "Favorite Lanes - Available Load",
            "status": "Dallas, TX, 73019 - San Antonio, TX, 78719",
            "time": "23m",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </MenuOptions>
</Menu>
`;
